[package]
name = "async-tx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "^0.8"
lock_api = "^0.4"
parking_lot = "^0.12"

[dev-dependencies]
async-std = "^1.11"
criterion = "^0.3"
futures = "^0.3"

[[bench]]
name = "kv_store"
harness = false